log/build_2024-11-03_20-20-10/robot_description/stderr.log
  File "/home/azakaria/Documents/sim_v2/ros2_ws/install/robot_description/lib/python3.12/site-packages/robot_description/mape_loop.py", line 322
    Float32MultiArray,,
                      ^
SyntaxError: invalid syntax

